# sitemon

./: .gitignore  Dockerfile  Pipfile  README.md  config.py  docker-compose.yml  etc_hosts_to_yaml.py  exampe_config.py  example-config.yml  pyproject.toml  sitemon.py
lib/: dig.py  monitor.py  slack.py
