[tool.poetry]
name = "sitemon"
version = "2.0.0"
description = ""
authors = ["yas-nyan <yas-nyan@sfc.wide.ad.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
slack-sdk = "^3.17.0"
logzero = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
